--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@hookform/resolvers": "^3.3.1",
     "@next/third-parties": "^14.1.4",
     "@popperjs/core": "^2.11.8",
+    "@react-three/drei": "^9.111.2",
+    "@react-three/fiber": "^8.17.5",
     "@reduxjs/toolkit": "^1.9.7",
     "@syncfusion/ej2-base": "^24.2.7",
     "@syncfusion/ej2-maps": "^24.2.4",
@@ -46,6 +48,7 @@
     "sass": "^1.68.0",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
+    "three": "^0.167.1",
     "wowjs": "^1.1.3",
     "yup": "^1.3.2"
   },
@@ -57,6 +60,7 @@
     "@types/react-dom": "latest",
     "@types/react-simple-maps": "^3.0.4",
     "@types/react-slick": "^0.23.10",
+    "@types/three": "^0.167.2",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
