--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@types/react-paginate": "^7.1.2",
     "@types/react-responsive-masonry": "^2.1.1",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "formidable": "^3.5.1",
     "i": "^0.3.7",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.15",
     "react": "latest",
     "react-countup": "^6.4.2",
     "react-dom": "latest",
@@ -56,6 +58,7 @@
     "@types/formidable": "^3.4.5",
     "@types/lodash": "^4.17.7",
     "@types/node": "latest",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-simple-maps": "^3.0.4",
