--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.15",
+    "razorpay": "^2.9.6",
     "react": "latest",
     "react-countup": "^6.4.2",
     "react-dom": "latest",
